feat:update seeding, change applications assignment to take work type into consideration
