# docs/openapi.yaml
@@ -1590,6 +1590,11 @@ components:
           type: array
           minItems: 1
           title: Allowedgradeids
+        allowedPositionIds:
+          items:
+            type: string
+          type: array
+          title: Allowedpositionids
       type: object
       required:
       - name
@@ -1983,6 +1988,13 @@ components:
             type: array
           - type: 'null'
           title: Allowedgradeids
+        allowedPositionIds:
+          anyOf:
+          - items:
+              type: string
+            type: array
+          - type: 'null'
+          title: Allowedpositionids
       type: object
       title: UpdateWorkTypePayload
     UrgentSettingsOut:
@@ -2119,6 +2131,11 @@ components:
             type: string
           type: array
           title: Allowedgradeids
+        allowedPositionIds:
+          items:
+            type: string
+          type: array
+          title: Allowedpositionids
       type: object
       required:
       - id
